--- a/DevilDaggersAssetEditor.Wpf/Gui/UserControls/PreviewerControls/TexturePreviewerControl.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/UserControls/PreviewerControls/TexturePreviewerControl.xaml
@@ -53,7 +53,7 @@
 		</StackPanel>
 		<StackPanel Grid.Column="2">
 			<Label Style="{StaticResource PreviewerTitleLabel}">File preview</Label>
-			<Image Name="PreviewImage" VerticalAlignment="Top" HorizontalAlignment="Left" MaxWidth="384" MaxHeight="384" RenderOptions.BitmapScalingMode="NearestNeighbor" />
+			<Image Name="PreviewImage" VerticalAlignment="Top" HorizontalAlignment="Left" RenderOptions.BitmapScalingMode="NearestNeighbor" />
 		</StackPanel>
 	</Grid>
 </UserControl>
