--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
@@ -8,6 +8,12 @@
 	<StackPanel Name="Main">
 		<StackPanel Margin="6" Background="{StaticResource Gray3}">
 			<StackPanel Style="{StaticResource PaddingStackPanel}">
+				<Label>Mod name</Label>
+				<TextBox Name="TextBoxModName" TextChanged="TextBoxModName_TextChanged" />
+			</StackPanel>
+		</StackPanel>
+		<StackPanel Margin="6" Background="{StaticResource Gray3}">
+			<StackPanel Style="{StaticResource PaddingStackPanel}">
 				<Button Name="ButtonMakeBinaries" Content="Make binaries" Click="MakeBinaries_Click" Style="{StaticResource OkButtonLarge}" />
 			</StackPanel>
 		</StackPanel>
