--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/MakeBinaries.xaml
@@ -4,7 +4,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="Make binaries" Height="768" Width="768" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Make binaries" Height="768" Width="768" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Closing="Window_Closing">
 	<StackPanel Name="Main">
 		<StackPanel Margin="6" Background="{StaticResource Gray3}">
 			<StackPanel Style="{StaticResource PaddingStackPanel}">
