--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/BinaryFileAnalyzer.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/BinaryFileAnalyzer.xaml
@@ -7,6 +7,9 @@
         Title="Binary file analyzer" Height="1024" Width="1366" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
 	<ScrollViewer>
 		<StackPanel Margin="32">
+			<TextBlock Style="{StaticResource ParagraphTextBlock}">
+				This tool can be used to visualize the contents of a binary file. This can be helpful in case your file happens to be unnecessarily large and you want to know what causes it.
+			</TextBlock>
 			<Button Name="OpenFile" Click="OpenFile_Click" Style="{StaticResource OkButtonLarge}">Open file</Button>
 			<StackPanel Visibility="Hidden" Name="ContentStackPanel">
 				<Label Name="FileName" FontWeight="Bold" FontSize="24" />
