Implement functionality to trim binaries by comparing them against other binaries

--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
@@ -46,6 +46,7 @@
 				</MenuItem>
 				<MenuItem Header="Tools">
 					<MenuItem Header="Analyze binary file" Click="AnalyzeBinaryFile_Click" />
+					<MenuItem Header="Trim binary file" Click="TrimBinaryFile_Click" />
 				</MenuItem>
 				<MenuItem Header="Help" Name="HelpItem">
 					<MenuItem Header="Help" Click="Help_Click" />
