--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/Settings.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/Settings.xaml
@@ -4,7 +4,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d"
-        Title="Settings" Height="768" Width="768" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="Window_Loaded" Closing="Window_Closing">
+        Title="Settings" Height="768" Width="768" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
 	<StackPanel x:Name="Data" Style="{StaticResource PaddingStackPanel}">
 		<Label FontWeight="Bold" FontSize="14">Standard folders</Label>
 		<Label>When enabled, these folders will be used as the initial directory for certain browse actions (selecting files or folders).</Label>
