--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
@@ -58,7 +58,9 @@
 			</Menu>
 		</DockPanel>
 		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768" />
+			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768">
+				<Label Name="LabelLoadingUi" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="56">Loading UI...</Label>
+			</TabControl>
 		</ScrollViewer>
 	</Grid>
 </Window>
