--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/Main.xaml
@@ -57,10 +57,8 @@
 				</MenuItem>
 			</Menu>
 		</DockPanel>
-		<ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-			<TabControl Grid.Row="1" Name="TabControl" Width="1366" Height="768">
-				<Label Name="LabelLoadingUi" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="56">Loading UI...</Label>
-			</TabControl>
+		<ScrollViewer Name="ScrollViewerMain" Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+			<Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="56">Loading UI...</Label>
 		</ScrollViewer>
 	</Grid>
 </Window>
