--- a/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Themes/DevilDaggersAssetEditor.xaml
@@ -3,11 +3,11 @@
 					xmlns:windows="clr-namespace:DevilDaggersAssetEditor.Wpf.Gui.Windows">
 	<Style TargetType="{x:Type windows:AboutWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:BinaryFileAnalyzerWindow}" BasedOn="{StaticResource {x:Type Window}}" />
-	<Style TargetType="{x:Type windows:DownloadModWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:ExtractBinariesWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:ImportAssetsWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:LoadingWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:MakeBinariesWindow}" BasedOn="{StaticResource {x:Type Window}}" />
+	<Style TargetType="{x:Type windows:ModManagerWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:MainWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:SettingsWindow}" BasedOn="{StaticResource {x:Type Window}}" />
 	<Style TargetType="{x:Type windows:TrimBinaryWindow}" BasedOn="{StaticResource {x:Type Window}}" />
