--- a/DevilDaggersAssetEditor.Wpf/Gui/Windows/ModManager.xaml
+++ b/DevilDaggersAssetEditor.Wpf/Gui/Windows/ModManager.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="DevilDaggersAssetEditor.Wpf.Gui.Windows.DownloadModWindow"
+﻿<Window x:Class="DevilDaggersAssetEditor.Wpf.Gui.Windows.ModManagerWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,10 +7,10 @@
 		mc:Ignorable="d"
         Title="Download mod" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
 	<Window.CommandBindings>
-		<CommandBinding Command="windows:DownloadModWindow.FirstPageCommand" CanExecute="CanExecute" Executed="FirstPage_Executed" />
-		<CommandBinding Command="windows:DownloadModWindow.PreviousPageCommand" CanExecute="CanExecute" Executed="PreviousPage_Executed" />
-		<CommandBinding Command="windows:DownloadModWindow.NextPageCommand" CanExecute="CanExecute" Executed="NextPage_Executed" />
-		<CommandBinding Command="windows:DownloadModWindow.LastPageCommand" CanExecute="CanExecute" Executed="LastPage_Executed" />
+		<CommandBinding Command="windows:ModManagerWindow.FirstPageCommand" CanExecute="CanExecute" Executed="FirstPage_Executed" />
+		<CommandBinding Command="windows:ModManagerWindow.PreviousPageCommand" CanExecute="CanExecute" Executed="PreviousPage_Executed" />
+		<CommandBinding Command="windows:ModManagerWindow.NextPageCommand" CanExecute="CanExecute" Executed="NextPage_Executed" />
+		<CommandBinding Command="windows:ModManagerWindow.LastPageCommand" CanExecute="CanExecute" Executed="LastPage_Executed" />
 	</Window.CommandBindings>
 	<ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
 		<StackPanel Height="730" Width="1366" Background="{StaticResource Gray3}">
